block and chains

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "crypto": "^1.0.1",
     "dat-swarm-defaults": "^1.0.3",
     "discovery-swarm": "^6.1.0",
-    "get-port": "^6.1.2"
+    "get-port": "^6.1.2",
+    "moment": "^2.29.4"
   }
 }
