--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dat-swarm-defaults": "^1.0.3",
     "discovery-swarm": "^5.1.0",
     "get-port": "^6.1.2",
+    "level": "^8.0.0",
     "moment": "^2.29.4"
   }
 }
